--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-There will be one more update after this. Strongly suggest using G++ or Clang++ compiler
+There will be one more update after this. I used G++ and Clang compiler while testing. Strongly suggest to use either.
