--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-There will be one more update after this. I used G++ and Clang compiler while testing. Strongly suggest to use either.
+This is the full version. I might update soon. 
