--- a/README
+++ b/README
@@ -1,7 +1,9 @@
-This is the Basic version. Updates will keep dropping.
-Finding perimeter of triangle is not exactly perfect since it asks alue of all 3 sides and equations usually dont mention all 3 sides (will work on a fix).
-The only reason i used C++ instead of a rather easier program for this task like python is just because I am trying to get used to C++.
+<> This is the Basic version. Updates will keep dropping.
+<> Program: C++
+<> You have the right to download, modify, and share it to others. But, do not sell this program to someone else.
 
+  
+  
 
 <===========================Patch_28-05-2022===========================>
 Changes:
