--- a/README
+++ b/README
@@ -1,47 +1,49 @@
-<> This is the Basic version. Updates will keep dropping.
-<> Program: C++
-<> You have the right to download, modify, and share it to others. But, do not sell this program to someone else.
+                                                  <Basic Area-Perimeter Calculater> 
+information:                                                  
+  <> This is the Basic version. Updates will keep dropping.
+  <> Program: C++
+  <> You have the right to download, modify, and share it to others. But, do not sell this program to someone else.
 
   
-  
+ 
+ 
+ <===========================Patch_28-05-2022===========================>
+  Changes:
+    <> Explaination for the Perimeter of Cicle has been more simplified 
+        (Take 5 as radius)
 
-<===========================Patch_28-05-2022===========================>
-Changes:
-  <> Explaination for the Perimeter of Cicle has been more simplified 
-      (Take 5 as radius)
-  
-      Before: For finding the Perimeter of the circle, the formula is 2 * Pi * R. In this situation
-              5 * 3.14 * 2 = 31.4
-      
-      After:  For finding the Perimeter of the circle, the formula is 2 * Pi * R. In this situation
-              2 * 3.14 * 5 = 31.4
-      
-      Why did I do this?
-      answer: The formula mentions 2 * Pi * R and the format of answer previously (5 * 3.14 * 2) makes the formula more confusing.
-  
-  
-  
-  <> Added a Reuse function
-    Before: Your Answer is: 1
-    Do you want to know how to find the answer to this problem?
-    Type '1' if yes
-    Type '2' if no
-    2
-    Task has ended
-    
-    After: Your Answer is: 1
-    Do you want to know how to find the answer to this problem?
-    Type '1' if yes
-    Type '2' if no
-    2
-    Okay!
-    Do you want to reuse this task?
-    Type '1' if yes
-    type '2' if no
+        Before: For finding the Perimeter of the circle, the formula is 2 * Pi * R. In this situation
+                5 * 3.14 * 2 = 31.4
 
-We have noted: 
-  <> Finding perimeter of triangle requires you to enter all 3 sides of the triangle.
-  <> The Program looks very confusing in the terminal.
+        After:  For finding the Perimeter of the circle, the formula is 2 * Pi * R. In this situation
+                2 * 3.14 * 5 = 31.4
+
+        Why did I do this?
+        answer: The formula mentions 2 * Pi * R and the format of answer previously (5 * 3.14 * 2) makes the formula more confusing.
+
+
   
-    *********************************************************************************
+    <> Added a Reuse function
+      Before: Your Answer is: 1
+      Do you want to know how to find the answer to this problem?
+      Type '1' if yes
+      Type '2' if no
+      2
+      Task has ended
+
+      After: Your Answer is: 1
+      Do you want to know how to find the answer to this problem?
+      Type '1' if yes
+      Type '2' if no
+      2
+      Okay!
+      Do you want to reuse this task?
+      Type '1' if yes
+      type '2' if no
+
+  We have noted: 
+    <> Finding perimeter of triangle requires you to enter all 3 sides of the triangle.
+    <> The Program looks very confusing in the terminal.
+
+      *********************************************************************************
 
