--- a/README
+++ b/README
@@ -1,12 +1,12 @@
                                                   <Basic Area-Perimeter Calculater> 
-# information:                                                  
+# information                                                  
   <> This is the Basic version. Updates will keep dropping.
   <> Program: C++
   <> You have the right to download, modify, and share it to others. But, do not sell this program to someone else.
 
   
  
-# Patch: 
+# Patch
  <===========================Patch_28-05-2022===========================>
   Changes:
     <> Explaination for the Perimeter of Cicle has been more simplified 
